// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "managerData": Object {
        "lineNumber": 2,
      },
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "managerData": Object {
        "lineNumber": 3,
      },
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "managerData": Object {
        "lineNumber": 4,
      },
    },
  ],
  "registryUrls": Array [
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts hashes 1`] = `
Object {
  "0": Object {
    "currentValue": "==2.1.13",
    "datasource": "pypi",
    "depName": "Django",
    "fromVersion": "2.1.13",
    "groupName": "Django",
    "managerData": Object {
      "lineNumber": 0,
    },
  },
  "1": Object {
    "currentDigest": "sha256:79c6cfbc76a4612efc8a80d0094b96f50cb2aa654b2b2b530a4e707fa2985b4b",
    "currentValue": "==2.1.13",
    "datasource": "pypi",
    "depName": "Django",
    "digestOneAndOnly": true,
    "fromVersion": "2.1.13",
    "groupName": "Django",
    "managerData": Object {
      "lineNumber": 0,
    },
  },
  "2": Object {
    "currentValue": "==1.11.0",
    "datasource": "pypi",
    "depName": "pytest-mock",
    "fromVersion": "1.11.0",
    "groupName": "pytest-mock",
    "managerData": Object {
      "lineNumber": 1,
    },
  },
  "3": Object {
    "currentDigest": "sha256:3fd5ffb33b7041aea60a77f77b98e05d5acd577d53a01bf2ff0ca9780c6e3d84",
    "currentValue": "==1.11.0",
    "datasource": "pypi",
    "depName": "pytest-mock",
    "digestOneAndOnly": true,
    "fromVersion": "1.11.0",
    "groupName": "pytest-mock",
    "managerData": Object {
      "lineNumber": 1,
    },
  },
  "4": Object {
    "currentDigest": "sha256:a89104018a4083b5c402e23b15b855924b74d9a3511e94f230a33621b72e35e1",
    "currentValue": "==1.11.0",
    "datasource": "pypi",
    "depName": "pytest-mock",
    "digestOneAndOnly": true,
    "fromVersion": "1.11.0",
    "groupName": "pytest-mock",
    "managerData": Object {
      "lineNumber": 1,
    },
  },
  "5": Object {
    "currentValue": "==1.12.239",
    "datasource": "pypi",
    "depName": "botocore",
    "fromVersion": "1.12.239",
    "groupName": "botocore",
    "managerData": Object {
      "lineNumber": 4,
    },
  },
  "6": Object {
    "currentDigest": "sha256:14ff881779776a5b08e4bb8d7e0cd6ca86e36fc80decc536d605c406fb81c993",
    "currentValue": "==1.12.239",
    "datasource": "pypi",
    "depName": "botocore",
    "digestOneAndOnly": true,
    "fromVersion": "1.12.239",
    "groupName": "botocore",
    "managerData": Object {
      "lineNumber": 4,
    },
  },
  "7": Object {
    "currentDigest": "sha256:5df4a8f8bb579daed58368d6c15cdd72455bfee7dc86be243e2ef4dff5ba1177",
    "currentValue": "==1.12.239",
    "datasource": "pypi",
    "depName": "botocore",
    "digestOneAndOnly": true,
    "fromVersion": "1.12.239",
    "groupName": "botocore",
    "managerData": Object {
      "lineNumber": 4,
    },
  },
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "==1",
    "datasource": "pypi",
    "depName": "Django",
    "fromVersion": "1",
    "managerData": Object {
      "lineNumber": 0,
    },
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "fromVersion": "0.6.27",
    "managerData": Object {
      "lineNumber": 1,
    },
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "fromVersion": "0.2",
    "managerData": Object {
      "lineNumber": 2,
    },
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "fromVersion": "2.4.5",
    "managerData": Object {
      "lineNumber": 3,
    },
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "fromVersion": "0.1.2",
    "managerData": Object {
      "lineNumber": 4,
    },
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles comments and commands 1`] = `
Array [
  Object {
    "currentValue": "==1.11.23",
    "datasource": "pypi",
    "depName": "Django",
    "fromVersion": "1.11.23",
    "managerData": Object {
      "lineNumber": 0,
    },
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "fromVersion": "0.6.27",
    "managerData": Object {
      "lineNumber": 1,
    },
    "skipReason": "ignored",
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "fromVersion": "0.2",
    "managerData": Object {
      "lineNumber": 2,
    },
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "fromVersion": "2.4.5",
    "managerData": Object {
      "lineNumber": 3,
    },
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "fromVersion": "0.1.2",
    "managerData": Object {
      "lineNumber": 4,
    },
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extra index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "managerData": Object {
        "lineNumber": 4,
      },
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "managerData": Object {
        "lineNumber": 5,
      },
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "managerData": Object {
        "lineNumber": 6,
      },
    },
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "managerData": Object {
        "lineNumber": 7,
      },
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "managerData": Object {
        "lineNumber": 8,
      },
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "managerData": Object {
        "lineNumber": 9,
      },
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extra index url and defaults without index to config 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "managerData": Object {
        "lineNumber": 3,
      },
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "managerData": Object {
        "lineNumber": 4,
      },
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "managerData": Object {
        "lineNumber": 5,
      },
    },
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "managerData": Object {
        "lineNumber": 6,
      },
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "managerData": Object {
        "lineNumber": 7,
      },
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "managerData": Object {
        "lineNumber": 8,
      },
    },
  ],
  "registryUrls": Array [
    "AnExistingDefaultUrl",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extra index url and defaults without index to pypi 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "managerData": Object {
        "lineNumber": 3,
      },
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "managerData": Object {
        "lineNumber": 4,
      },
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "managerData": Object {
        "lineNumber": 5,
      },
    },
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "fromVersion": "0.3.1",
      "managerData": Object {
        "lineNumber": 6,
      },
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "fromVersion": "1.0.0",
      "managerData": Object {
        "lineNumber": 7,
      },
    },
    Object {
      "currentValue": "==1.9",
      "datasource": "pypi",
      "depName": "not_semver",
      "fromVersion": "1.9",
      "managerData": Object {
        "lineNumber": 8,
      },
    },
  ],
  "registryUrls": Array [
    "https://pypi.org/pypi/",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extras and complex index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "datasource": "pypi",
      "depName": "Django",
      "fromVersion": "2.0.12",
      "managerData": Object {
        "lineNumber": 1,
      },
    },
    Object {
      "currentValue": "==4.1.1",
      "datasource": "pypi",
      "depName": "celery",
      "fromVersion": "4.1.1",
      "managerData": Object {
        "lineNumber": 2,
      },
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
      "managerData": Object {
        "lineNumber": 3,
      },
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
  ],
}
`;
